[project]
name = "agent-workflow-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.148.0",
    "crewai-tools>=0.55.0",
    "langchain-community>=0.3.27",
    "openai>=1.97.0",
    "pydantic>=2.11.7",
    "streamlit>=1.47.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
